exports[`prefer-logical-operator-over-ternary > invalid(1): const condition = a === b; const value = c === d; condition ? true : value 1`] = `

  1 | const condition = a === b; const value = c === d; condition ? true : value

`;

exports[`prefer-logical-operator-over-ternary > invalid(1): const condition = a === b; const value = c === d; condition ? true : value 2`] = `

Message:
> 1 | const condition = a === b; const value = c === d; condition ? true : value
    |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Output:
  1 | const condition = a === b; const value = c === d; condition || value

`;

exports[`prefer-logical-operator-over-ternary > invalid(1): declare function pick(value: true): 'literal';\ndeclare function pick(value: true | 'fallback'): 'union';\nconst result: 'union' = pick(true ? true : 'fallback'); 1`] = `

Filename: file.ts

  1 | declare function pick(value: true): 'literal';
  2 | declare function pick(value: true | 'fallback'): 'union';
  3 | const result: 'union' = pick(true ? true : 'fallback');

`;

exports[`prefer-logical-operator-over-ternary > invalid(1): declare function pick(value: true): 'literal';\ndeclare function pick(value: true | 'fallback'): 'union';\nconst result: 'union' = pick(true ? true : 'fallback'); 2`] = `

Message:
  1 | declare function pick(value: true): 'literal';
  2 | declare function pick(value: true | 'fallback'): 'union';
> 3 | const result: 'union' = pick(true ? true : 'fallback');
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | declare function pick(value: true): 'literal';
  2 | declare function pick(value: true | 'fallback'): 'union';
  3 | const result: 'union' = pick(true ?? 'fallback');

Suggestion 2/2: Switch to \`||\` operator.:
  1 | declare function pick(value: true): 'literal';
  2 | declare function pick(value: true | 'fallback'): 'union';
  3 | const result: 'union' = pick(true || 'fallback');

`;

exports[`prefer-logical-operator-over-ternary > invalid(1): foo ? foo : bar; 1`] = `

  1 | foo ? foo : bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(1): foo ? foo : bar; 2`] = `

Message:
> 1 | foo ? foo : bar;
    | ^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | foo ?? bar;

Suggestion 2/2: Switch to \`||\` operator.:
  1 | foo || bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(10): (a === b || c === d) ? e === f : false 1`] = `

  1 | (a === b || c === d) ? e === f : false

`;

exports[`prefer-logical-operator-over-ternary > invalid(10): (a === b || c === d) ? e === f : false 2`] = `

Message:
> 1 | (a === b || c === d) ? e === f : false
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Output:
  1 | (a === b || c === d) && (e === f)

`;

exports[`prefer-logical-operator-over-ternary > invalid(10): foo == undefined ? bar : foo; 1`] = `

  1 | foo == undefined ? bar : foo;

`;

exports[`prefer-logical-operator-over-ternary > invalid(10): foo == undefined ? bar : foo; 2`] = `

Message:
> 1 | foo == undefined ? bar : foo;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(11): (sideEffect(), a === b) ? false : c === d 1`] = `

  1 | (sideEffect(), a === b) ? false : c === d

`;

exports[`prefer-logical-operator-over-ternary > invalid(11): (sideEffect(), a === b) ? false : c === d 2`] = `

Message:
> 1 | (sideEffect(), a === b) ? false : c === d
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Output:
  1 | !(sideEffect(), a === b) && (c === d)

`;

exports[`prefer-logical-operator-over-ternary > invalid(11): null == foo ? bar : foo; 1`] = `

  1 | null == foo ? bar : foo;

`;

exports[`prefer-logical-operator-over-ternary > invalid(11): null == foo ? bar : foo; 2`] = `

Message:
> 1 | null == foo ? bar : foo;
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(12): const element = <div>{a === b ? true : c === d}</div> 1`] = `

  1 | const element = <div>{a === b ? true : c === d}</div>

`;

exports[`prefer-logical-operator-over-ternary > invalid(12): const element = <div>{a === b ? true : c === d}</div> 2`] = `

Message:
> 1 | const element = <div>{a === b ? true : c === d}</div>
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Output:
  1 | const element = <div>{(a === b) || (c === d)}</div>

`;

exports[`prefer-logical-operator-over-ternary > invalid(12): undefined == foo ? bar : foo; 1`] = `

  1 | undefined == foo ? bar : foo;

`;

exports[`prefer-logical-operator-over-ternary > invalid(12): undefined == foo ? bar : foo; 2`] = `

Message:
> 1 | undefined == foo ? bar : foo;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(13): const previous = foo\na === b ? true : c === d 1`] = `

  1 | const previous = foo
  2 | a === b ? true : c === d

`;

exports[`prefer-logical-operator-over-ternary > invalid(13): const previous = foo\na === b ? true : c === d 2`] = `

Message:
  1 | const previous = foo
> 2 | a === b ? true : c === d
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Output:
  1 | const previous = foo
  2 | ;(a === b) || (c === d)

`;

exports[`prefer-logical-operator-over-ternary > invalid(13): foo != null ? foo : bar; 1`] = `

  1 | foo != null ? foo : bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(13): foo != null ? foo : bar; 2`] = `

Message:
> 1 | foo != null ? foo : bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(14): function f(condition: boolean, value: boolean) { return condition ? value : true; } 1`] = `

  1 | function f(condition: boolean, value: boolean) { return condition ? value : true; }

`;

exports[`prefer-logical-operator-over-ternary > invalid(14): function f(condition: boolean, value: boolean) { return condition ? value : true; } 2`] = `

Message:
> 1 | function f(condition: boolean, value: boolean) { return condition ? value : true; }
    |                                                         ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(14): null != foo ? foo : bar; 1`] = `

  1 | null != foo ? foo : bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(14): null != foo ? foo : bar; 2`] = `

Message:
> 1 | null != foo ? foo : bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(15): foo != undefined ? foo : bar; 1`] = `

  1 | foo != undefined ? foo : bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(15): foo != undefined ? foo : bar; 2`] = `

Message:
> 1 | foo != undefined ? foo : bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(15): function f(condition: boolean = false) { return condition ? true : Boolean(fallback()); } 1`] = `

  1 | function f(condition: boolean = false) { return condition ? true : Boolean(fallback()); }

`;

exports[`prefer-logical-operator-over-ternary > invalid(15): function f(condition: boolean = false) { return condition ? true : Boolean(fallback()); } 2`] = `

Message:
> 1 | function f(condition: boolean = false) { return condition ? true : Boolean(fallback()); }
    |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(16): (condition as boolean) ? true : (value as boolean) 1`] = `

  1 | (condition as boolean) ? true : (value as boolean)

`;

exports[`prefer-logical-operator-over-ternary > invalid(16): (condition as boolean) ? true : (value as boolean) 2`] = `

Message:
> 1 | (condition as boolean) ? true : (value as boolean)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(16): undefined != foo ? foo : bar; 1`] = `

  1 | undefined != foo ? foo : bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(16): undefined != foo ? foo : bar; 2`] = `

Message:
> 1 | undefined != foo ? foo : bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(17): (<boolean>condition) ? false : (<boolean>value) 1`] = `

  1 | (<boolean>condition) ? false : (<boolean>value)

`;

exports[`prefer-logical-operator-over-ternary > invalid(17): (<boolean>condition) ? false : (<boolean>value) 2`] = `

Message:
> 1 | (<boolean>condition) ? false : (<boolean>value)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(17): foo === null || foo === undefined ? bar : foo; 1`] = `

  1 | foo === null || foo === undefined ? bar : foo;

`;

exports[`prefer-logical-operator-over-ternary > invalid(17): foo === null || foo === undefined ? bar : foo; 2`] = `

Message:
> 1 | foo === null || foo === undefined ? bar : foo;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(18): foo === undefined || foo === null ? bar : foo; 1`] = `

  1 | foo === undefined || foo === null ? bar : foo;

`;

exports[`prefer-logical-operator-over-ternary > invalid(18): foo === undefined || foo === null ? bar : foo; 2`] = `

Message:
> 1 | foo === undefined || foo === null ? bar : foo;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(18): function f(condition: boolean, value: boolean) { return (condition satisfies boolean) ? false : value; } 1`] = `

  1 | function f(condition: boolean, value: boolean) { return (condition satisfies boolean) ? false : value; }

`;

exports[`prefer-logical-operator-over-ternary > invalid(18): function f(condition: boolean, value: boolean) { return (condition satisfies boolean) ? false : value; } 2`] = `

Message:
> 1 | function f(condition: boolean, value: boolean) { return (condition satisfies boolean) ? false : value; }
    |                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(19): foo === null || undefined === foo ? bar : foo; 1`] = `

  1 | foo === null || undefined === foo ? bar : foo;

`;

exports[`prefer-logical-operator-over-ternary > invalid(19): foo === null || undefined === foo ? bar : foo; 2`] = `

Message:
> 1 | foo === null || undefined === foo ? bar : foo;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(19): function f(condition: boolean, value: boolean) { return condition! ? value! : false; } 1`] = `

  1 | function f(condition: boolean, value: boolean) { return condition! ? value! : false; }

`;

exports[`prefer-logical-operator-over-ternary > invalid(19): function f(condition: boolean, value: boolean) { return condition! ? value! : false; } 2`] = `

Message:
> 1 | function f(condition: boolean, value: boolean) { return condition! ? value! : false; }
    |                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(2): a === b ? /* keep */ true : c === d 1`] = `

  1 | a === b ? /* keep */ true : c === d

`;

exports[`prefer-logical-operator-over-ternary > invalid(2): a === b ? /* keep */ true : c === d 2`] = `

Message:
> 1 | a === b ? /* keep */ true : c === d
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(2): foo ? foo /* keep me */ : bar; 1`] = `

  1 | foo ? foo /* keep me */ : bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(2): foo ? foo /* keep me */ : bar; 2`] = `

Message:
> 1 | foo ? foo /* keep me */ : bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(20): function f(object: {condition: boolean, value: boolean}) { return object.condition ? true : object.value; } 1`] = `

Filename: file.ts

  1 | function f(object: {condition: boolean, value: boolean}) { return object.condition ? true : object.value; }

`;

exports[`prefer-logical-operator-over-ternary > invalid(20): function f(object: {condition: boolean, value: boolean}) { return object.condition ? true : object.value; } 2`] = `

Message:
> 1 | function f(object: {condition: boolean, value: boolean}) { return object.condition ? true : object.value; }
    |                                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(20): null === foo || undefined === foo ? bar : foo; 1`] = `

  1 | null === foo || undefined === foo ? bar : foo;

`;

exports[`prefer-logical-operator-over-ternary > invalid(20): null === foo || undefined === foo ? bar : foo; 2`] = `

Message:
> 1 | null === foo || undefined === foo ? bar : foo;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(21): condition ? true : a === b 1`] = `

  1 | condition ? true : a === b

`;

exports[`prefer-logical-operator-over-ternary > invalid(21): condition ? true : a === b 2`] = `

Message:
> 1 | condition ? true : a === b
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Output:
  1 | Boolean(condition) || (a === b)

`;

exports[`prefer-logical-operator-over-ternary > invalid(21): foo !== null && foo !== undefined ? foo : bar; 1`] = `

  1 | foo !== null && foo !== undefined ? foo : bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(21): foo !== null && foo !== undefined ? foo : bar; 2`] = `

Message:
> 1 | foo !== null && foo !== undefined ? foo : bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(22): \"text\" ? true : a === b 1`] = `

  1 | "text" ? true : a === b

`;

exports[`prefer-logical-operator-over-ternary > invalid(22): \"text\" ? true : a === b 2`] = `

Message:
> 1 | "text" ? true : a === b
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Output:
  1 | Boolean("text") || (a === b)

`;

exports[`prefer-logical-operator-over-ternary > invalid(22): foo !== undefined && foo !== null ? foo : bar; 1`] = `

  1 | foo !== undefined && foo !== null ? foo : bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(22): foo !== undefined && foo !== null ? foo : bar; 2`] = `

Message:
> 1 | foo !== undefined && foo !== null ? foo : bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(23): foo !== null && undefined !== foo ? foo : bar; 1`] = `

  1 | foo !== null && undefined !== foo ? foo : bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(23): foo !== null && undefined !== foo ? foo : bar; 2`] = `

Message:
> 1 | foo !== null && undefined !== foo ? foo : bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(23): value /* keep */ ? true : Boolean(fallback()) 1`] = `

  1 | value /* keep */ ? true : Boolean(fallback())

`;

exports[`prefer-logical-operator-over-ternary > invalid(23): value /* keep */ ? true : Boolean(fallback()) 2`] = `

Message:
> 1 | value /* keep */ ? true : Boolean(fallback())
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(24): null !== foo && undefined !== foo ? foo : bar; 1`] = `

  1 | null !== foo && undefined !== foo ? foo : bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(24): null !== foo && undefined !== foo ? foo : bar; 2`] = `

Message:
> 1 | null !== foo && undefined !== foo ? foo : bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(24): value ? /* keep */ true : Boolean(fallback()) 1`] = `

  1 | value ? /* keep */ true : Boolean(fallback())

`;

exports[`prefer-logical-operator-over-ternary > invalid(24): value ? /* keep */ true : Boolean(fallback()) 2`] = `

Message:
> 1 | value ? /* keep */ true : Boolean(fallback())
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(25): foo == null ? undefined : foo.bar; 1`] = `

  1 | foo == null ? undefined : foo.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(25): foo == null ? undefined : foo.bar; 2`] = `

Message:
> 1 | foo == null ? undefined : foo.bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | foo?.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(25): value ? Boolean(/* keep */ fallback()) : false 1`] = `

  1 | value ? Boolean(/* keep */ fallback()) : false

`;

exports[`prefer-logical-operator-over-ternary > invalid(25): value ? Boolean(/* keep */ fallback()) : false 2`] = `

Message:
> 1 | value ? Boolean(/* keep */ fallback()) : false
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(26): const element = <div>{value ? true : Boolean(fallback())}</div> 1`] = `

  1 | const element = <div>{value ? true : Boolean(fallback())}</div>

`;

exports[`prefer-logical-operator-over-ternary > invalid(26): const element = <div>{value ? true : Boolean(fallback())}</div> 2`] = `

Message:
> 1 | const element = <div>{value ? true : Boolean(fallback())}</div>
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Output:
  1 | const element = <div>{Boolean(value) || Boolean(fallback())}</div>

`;

exports[`prefer-logical-operator-over-ternary > invalid(26): foo == undefined ? undefined : foo.bar; 1`] = `

  1 | foo == undefined ? undefined : foo.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(26): foo == undefined ? undefined : foo.bar; 2`] = `

Message:
> 1 | foo == undefined ? undefined : foo.bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | foo?.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(27): foo != null ? foo.bar : undefined; 1`] = `

  1 | foo != null ? foo.bar : undefined;

`;

exports[`prefer-logical-operator-over-ternary > invalid(27): foo != null ? foo.bar : undefined; 2`] = `

Message:
> 1 | foo != null ? foo.bar : undefined;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | foo?.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(27): function f(condition: string, value: boolean) { return condition ? true : value; } 1`] = `

  1 | function f(condition: string, value: boolean) { return condition ? true : value; }

`;

exports[`prefer-logical-operator-over-ternary > invalid(27): function f(condition: string, value: boolean) { return condition ? true : value; } 2`] = `

Message:
> 1 | function f(condition: string, value: boolean) { return condition ? true : value; }
    |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(28): foo != null ? foo[bar] : undefined; 1`] = `

  1 | foo != null ? foo[bar] : undefined;

`;

exports[`prefer-logical-operator-over-ternary > invalid(28): foo != null ? foo[bar] : undefined; 2`] = `

Message:
> 1 | foo != null ? foo[bar] : undefined;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | foo?.[bar];

`;

exports[`prefer-logical-operator-over-ternary > invalid(28): function f(object: {condition: boolean | undefined, value: boolean}) { return object.condition ? true : object.value; } 1`] = `

Filename: file.ts

  1 | function f(object: {condition: boolean | undefined, value: boolean}) { return object.condition ? true : object.value; }

`;

exports[`prefer-logical-operator-over-ternary > invalid(28): function f(object: {condition: boolean | undefined, value: boolean}) { return object.condition ? true : object.value; } 2`] = `

Message:
> 1 | function f(object: {condition: boolean | undefined, value: boolean}) { return object.condition ? true : object.value; }
    |                                                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(29): function f(constraint: object | undefined, visit: (value: object) => boolean) { return constraint ? visit(constraint) : false; } 1`] = `

  1 | function f(constraint: object | undefined, visit: (value: object) => boolean) { return constraint ? visit(constraint) : false; }

`;

exports[`prefer-logical-operator-over-ternary > invalid(29): function f(constraint: object | undefined, visit: (value: object) => boolean) { return constraint ? visit(constraint) : false; } 2`] = `

Message:
> 1 | function f(constraint: object | undefined, visit: (value: object) => boolean) { return constraint ? visit(constraint) : false; }
    |                                                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(29): null != foo ? foo.bar : undefined; 1`] = `

  1 | null != foo ? foo.bar : undefined;

`;

exports[`prefer-logical-operator-over-ternary > invalid(29): null != foo ? foo.bar : undefined; 2`] = `

Message:
> 1 | null != foo ? foo.bar : undefined;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | foo?.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(3): a === b /* keep */ ? false : c === d 1`] = `

  1 | a === b /* keep */ ? false : c === d

`;

exports[`prefer-logical-operator-over-ternary > invalid(3): a === b /* keep */ ? false : c === d 2`] = `

Message:
> 1 | a === b /* keep */ ? false : c === d
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(3): foo /* keep me */ ? foo : bar; 1`] = `

  1 | foo /* keep me */ ? foo : bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(3): foo /* keep me */ ? foo : bar; 2`] = `

Message:
> 1 | foo /* keep me */ ? foo : bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(30): (condition as string) ? true : Boolean(fallback()) 1`] = `

  1 | (condition as string) ? true : Boolean(fallback())

`;

exports[`prefer-logical-operator-over-ternary > invalid(30): (condition as string) ? true : Boolean(fallback()) 2`] = `

Message:
> 1 | (condition as string) ? true : Boolean(fallback())
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(30): foo !== null && foo !== undefined ? foo.bar : undefined; 1`] = `

  1 | foo !== null && foo !== undefined ? foo.bar : undefined;

`;

exports[`prefer-logical-operator-over-ternary > invalid(30): foo !== null && foo !== undefined ? foo.bar : undefined; 2`] = `

Message:
> 1 | foo !== null && foo !== undefined ? foo.bar : undefined;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | foo?.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(31): (<string>condition) ? Boolean(fallback()) : false 1`] = `

  1 | (<string>condition) ? Boolean(fallback()) : false

`;

exports[`prefer-logical-operator-over-ternary > invalid(31): (<string>condition) ? Boolean(fallback()) : false 2`] = `

Message:
> 1 | (<string>condition) ? Boolean(fallback()) : false
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(31): foo !== null && undefined !== foo ? foo.bar : undefined; 1`] = `

  1 | foo !== null && undefined !== foo ? foo.bar : undefined;

`;

exports[`prefer-logical-operator-over-ternary > invalid(31): foo !== null && undefined !== foo ? foo.bar : undefined; 2`] = `

Message:
> 1 | foo !== null && undefined !== foo ? foo.bar : undefined;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | foo?.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(32): condition! ? true : Boolean(fallback()) 1`] = `

  1 | condition! ? true : Boolean(fallback())

`;

exports[`prefer-logical-operator-over-ternary > invalid(32): condition! ? true : Boolean(fallback()) 2`] = `

Message:
> 1 | condition! ? true : Boolean(fallback())
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(32): foo === null || foo === undefined ? undefined : foo.bar; 1`] = `

  1 | foo === null || foo === undefined ? undefined : foo.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(32): foo === null || foo === undefined ? undefined : foo.bar; 2`] = `

Message:
> 1 | foo === null || foo === undefined ? undefined : foo.bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | foo?.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(33): (condition satisfies string) ? Boolean(fallback()) : false 1`] = `

  1 | (condition satisfies string) ? Boolean(fallback()) : false

`;

exports[`prefer-logical-operator-over-ternary > invalid(33): (condition satisfies string) ? Boolean(fallback()) : false 2`] = `

Message:
> 1 | (condition satisfies string) ? Boolean(fallback()) : false
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(33): foo == null ? undefined : foo[bar]; 1`] = `

  1 | foo == null ? undefined : foo[bar];

`;

exports[`prefer-logical-operator-over-ternary > invalid(33): foo == null ? undefined : foo[bar]; 2`] = `

Message:
> 1 | foo == null ? undefined : foo[bar];
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | foo?.[bar];

`;

exports[`prefer-logical-operator-over-ternary > invalid(34): foo == null ? undefined : (foo).bar; 1`] = `

  1 | foo == null ? undefined : (foo).bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(34): foo == null ? undefined : (foo).bar; 2`] = `

Message:
> 1 | foo == null ? undefined : (foo).bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | (foo)?.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(34): value ? true : Boolean(fallback()) 1`] = `

Filename: file.ts

  1 | value ? true : Boolean(fallback())

`;

exports[`prefer-logical-operator-over-ternary > invalid(34): value ? true : Boolean(fallback()) 2`] = `

Message:
> 1 | value ? true : Boolean(fallback())
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(35): foo == null ? undefined : (foo)[bar]; 1`] = `

  1 | foo == null ? undefined : (foo)[bar];

`;

exports[`prefer-logical-operator-over-ternary > invalid(35): foo == null ? undefined : (foo)[bar]; 2`] = `

Message:
> 1 | foo == null ? undefined : (foo)[bar];
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | (foo)?.[bar];

`;

exports[`prefer-logical-operator-over-ternary > invalid(35): value ? true : Boolean(fallback()) 1`] = `

Filename: file.mts

  1 | value ? true : Boolean(fallback())

`;

exports[`prefer-logical-operator-over-ternary > invalid(35): value ? true : Boolean(fallback()) 2`] = `

Message:
> 1 | value ? true : Boolean(fallback())
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(36): null == foo ? undefined : foo.bar; 1`] = `

  1 | null == foo ? undefined : foo.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(36): null == foo ? undefined : foo.bar; 2`] = `

Message:
> 1 | null == foo ? undefined : foo.bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | foo?.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(36): value ? true : Boolean(fallback()) 1`] = `

Filename: file.cts

  1 | value ? true : Boolean(fallback())

`;

exports[`prefer-logical-operator-over-ternary > invalid(36): value ? true : Boolean(fallback()) 2`] = `

Message:
> 1 | value ? true : Boolean(fallback())
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(37): undefined == foo ? undefined : foo.bar; 1`] = `

  1 | undefined == foo ? undefined : foo.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(37): undefined == foo ? undefined : foo.bar; 2`] = `

Message:
> 1 | undefined == foo ? undefined : foo.bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | foo?.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(37): value ? true : Boolean(fallback()) 1`] = `

Filename: file.tsx

  1 | value ? true : Boolean(fallback())

`;

exports[`prefer-logical-operator-over-ternary > invalid(37): value ? true : Boolean(fallback()) 2`] = `

Message:
> 1 | value ? true : Boolean(fallback())
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(38): foo() ? foo() : bar 1`] = `

  1 | foo() ? foo() : bar

`;

exports[`prefer-logical-operator-over-ternary > invalid(38): foo() ? foo() : bar 2`] = `

Message:
> 1 | foo() ? foo() : bar
    | ^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | foo() ?? bar

Suggestion 2/2: Switch to \`||\` operator.:
  1 | foo() || bar

`;

exports[`prefer-logical-operator-over-ternary > invalid(38): value ? Boolean(fallback()) : false 1`] = `

Filename: file.js

  1 | value ? Boolean(fallback()) : false

`;

exports[`prefer-logical-operator-over-ternary > invalid(38): value ? Boolean(fallback()) : false 2`] = `

Message:
> 1 | value ? Boolean(fallback()) : false
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(39): foo ? foo : a && b 1`] = `

  1 | foo ? foo : a && b

`;

exports[`prefer-logical-operator-over-ternary > invalid(39): foo ? foo : a && b 2`] = `

Message:
> 1 | foo ? foo : a && b
    | ^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | foo ?? (a && b)

Suggestion 2/2: Switch to \`||\` operator.:
  1 | foo || (a && b)

`;

exports[`prefer-logical-operator-over-ternary > invalid(4): !bar ? foo /* keep me */ : bar; 1`] = `

  1 | !bar ? foo /* keep me */ : bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(4): !bar ? foo /* keep me */ : bar; 2`] = `

Message:
> 1 | !bar ? foo /* keep me */ : bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(4): a === b ? c === d : /* keep */ true 1`] = `

  1 | a === b ? c === d : /* keep */ true

`;

exports[`prefer-logical-operator-over-ternary > invalid(4): a === b ? c === d : /* keep */ true 2`] = `

Message:
> 1 | a === b ? c === d : /* keep */ true
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

`;

exports[`prefer-logical-operator-over-ternary > invalid(40): foo ? foo : a || b 1`] = `

  1 | foo ? foo : a || b

`;

exports[`prefer-logical-operator-over-ternary > invalid(40): foo ? foo : a || b 2`] = `

Message:
> 1 | foo ? foo : a || b
    | ^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | foo ?? (a || b)

Suggestion 2/2: Switch to \`||\` operator.:
  1 | foo || a || b

`;

exports[`prefer-logical-operator-over-ternary > invalid(41): foo ? foo : a ?? b 1`] = `

  1 | foo ? foo : a ?? b

`;

exports[`prefer-logical-operator-over-ternary > invalid(41): foo ? foo : a ?? b 2`] = `

Message:
> 1 | foo ? foo : a ?? b
    | ^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | foo ?? a ?? b

Suggestion 2/2: Switch to \`||\` operator.:
  1 | foo || (a ?? b)

`;

exports[`prefer-logical-operator-over-ternary > invalid(42): a && b ? a && b : bar 1`] = `

  1 | a && b ? a && b : bar

`;

exports[`prefer-logical-operator-over-ternary > invalid(42): a && b ? a && b : bar 2`] = `

Message:
> 1 | a && b ? a && b : bar
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | (a && b) ?? bar

Suggestion 2/2: Switch to \`||\` operator.:
  1 | (a && b) || bar

`;

exports[`prefer-logical-operator-over-ternary > invalid(43): a || b ? a || b : bar 1`] = `

  1 | a || b ? a || b : bar

`;

exports[`prefer-logical-operator-over-ternary > invalid(43): a || b ? a || b : bar 2`] = `

Message:
> 1 | a || b ? a || b : bar
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | (a || b) ?? bar

Suggestion 2/2: Switch to \`||\` operator.:
  1 | a || b || bar

`;

exports[`prefer-logical-operator-over-ternary > invalid(44): a ?? b ? a ?? b : bar 1`] = `

  1 | a ?? b ? a ?? b : bar

`;

exports[`prefer-logical-operator-over-ternary > invalid(44): a ?? b ? a ?? b : bar 2`] = `

Message:
> 1 | a ?? b ? a ?? b : bar
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | a ?? b ?? bar

Suggestion 2/2: Switch to \`||\` operator.:
  1 | (a ?? b) || bar

`;

exports[`prefer-logical-operator-over-ternary > invalid(45): foo ? foo : await a 1`] = `

  1 | foo ? foo : await a

`;

exports[`prefer-logical-operator-over-ternary > invalid(45): foo ? foo : await a 2`] = `

Message:
> 1 | foo ? foo : await a
    | ^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | foo ?? (await a)

Suggestion 2/2: Switch to \`||\` operator.:
  1 | foo || (await a)

`;

exports[`prefer-logical-operator-over-ternary > invalid(46): await a ? await a : foo 1`] = `

  1 | await a ? await a : foo

`;

exports[`prefer-logical-operator-over-ternary > invalid(46): await a ? await a : foo 2`] = `

Message:
> 1 | await a ? await a : foo
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | (await a) ?? foo

Suggestion 2/2: Switch to \`||\` operator.:
  1 | (await a) || foo

`;

exports[`prefer-logical-operator-over-ternary > invalid(47): const foo = []\n!+a ? b : +a 1`] = `

  1 | const foo = []
  2 | !+a ? b : +a

`;

exports[`prefer-logical-operator-over-ternary > invalid(47): const foo = []\n!+a ? b : +a 2`] = `

Message:
  1 | const foo = []
> 2 | !+a ? b : +a
    | ^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | const foo = []
  2 | ;+a ?? b

Suggestion 2/2: Switch to \`||\` operator.:
  1 | const foo = []
  2 | ;+a || b

`;

exports[`prefer-logical-operator-over-ternary > invalid(48): const foo = []\na && b ? a && b : 1 1`] = `

  1 | const foo = []
  2 | a && b ? a && b : 1

`;

exports[`prefer-logical-operator-over-ternary > invalid(48): const foo = []\na && b ? a && b : 1 2`] = `

Message:
  1 | const foo = []
> 2 | a && b ? a && b : 1
    | ^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | const foo = []
  2 | ;(a && b) ?? 1

Suggestion 2/2: Switch to \`||\` operator.:
  1 | const foo = []
  2 | ;(a && b) || 1

`;

exports[`prefer-logical-operator-over-ternary > invalid(49): (foo as string) ? (foo as string) : bar; 1`] = `

  1 | (foo as string) ? (foo as string) : bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(49): (foo as string) ? (foo as string) : bar; 2`] = `

Message:
> 1 | (foo as string) ? (foo as string) : bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | (foo as string) ?? bar;

Suggestion 2/2: Switch to \`||\` operator.:
  1 | (foo as string) || bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(5): ((a === b)) ? true : ((c === d)) 1`] = `

  1 | ((a === b)) ? true : ((c === d))

`;

exports[`prefer-logical-operator-over-ternary > invalid(5): ((a === b)) ? true : ((c === d)) 2`] = `

Message:
> 1 | ((a === b)) ? true : ((c === d))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Output:
  1 | ((a === b)) || ((c === d))

`;

exports[`prefer-logical-operator-over-ternary > invalid(5): foo.bar ? foo.bar : foo.baz 1`] = `

  1 | foo.bar ? foo.bar : foo.baz

`;

exports[`prefer-logical-operator-over-ternary > invalid(5): foo.bar ? foo.bar : foo.baz 2`] = `

Message:
> 1 | foo.bar ? foo.bar : foo.baz
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | foo.bar ?? foo.baz

Suggestion 2/2: Switch to \`||\` operator.:
  1 | foo.bar || foo.baz

`;

exports[`prefer-logical-operator-over-ternary > invalid(50): (foo.bar as string) ? (foo.bar as string) : foo.baz 1`] = `

  1 | (foo.bar as string) ? (foo.bar as string) : foo.baz

`;

exports[`prefer-logical-operator-over-ternary > invalid(50): (foo.bar as string) ? (foo.bar as string) : foo.baz 2`] = `

Message:
> 1 | (foo.bar as string) ? (foo.bar as string) : foo.baz
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | (foo.bar as string) ?? foo.baz

Suggestion 2/2: Switch to \`||\` operator.:
  1 | (foo.bar as string) || foo.baz

`;

exports[`prefer-logical-operator-over-ternary > invalid(51): (a && b as boolean) ? (a && b as boolean) : bar 1`] = `

  1 | (a && b as boolean) ? (a && b as boolean) : bar

`;

exports[`prefer-logical-operator-over-ternary > invalid(51): (a && b as boolean) ? (a && b as boolean) : bar 2`] = `

Message:
> 1 | (a && b as boolean) ? (a && b as boolean) : bar
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | (a && b as boolean) ?? bar

Suggestion 2/2: Switch to \`||\` operator.:
  1 | (a && b as boolean) || bar

`;

exports[`prefer-logical-operator-over-ternary > invalid(52): foo! ? foo! : bar; 1`] = `

  1 | foo! ? foo! : bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(52): foo! ? foo! : bar; 2`] = `

Message:
> 1 | foo! ? foo! : bar;
    | ^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | foo! ?? bar;

Suggestion 2/2: Switch to \`||\` operator.:
  1 | foo! || bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(53): foo.bar! ? foo.bar! : foo.baz 1`] = `

  1 | foo.bar! ? foo.bar! : foo.baz

`;

exports[`prefer-logical-operator-over-ternary > invalid(53): foo.bar! ? foo.bar! : foo.baz 2`] = `

Message:
> 1 | foo.bar! ? foo.bar! : foo.baz
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | foo.bar! ?? foo.baz

Suggestion 2/2: Switch to \`||\` operator.:
  1 | foo.bar! || foo.baz

`;

exports[`prefer-logical-operator-over-ternary > invalid(54): foo == null ? undefined : (foo as Foo).bar; 1`] = `

  1 | foo == null ? undefined : (foo as Foo).bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(54): foo == null ? undefined : (foo as Foo).bar; 2`] = `

Message:
> 1 | foo == null ? undefined : (foo as Foo).bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | (foo as Foo)?.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(55): foo == null ? undefined : (foo satisfies Foo).bar; 1`] = `

  1 | foo == null ? undefined : (foo satisfies Foo).bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(55): foo == null ? undefined : (foo satisfies Foo).bar; 2`] = `

Message:
> 1 | foo == null ? undefined : (foo satisfies Foo).bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | (foo satisfies Foo)?.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(56): (foo as Foo) == null ? undefined : foo.bar; 1`] = `

  1 | (foo as Foo) == null ? undefined : foo.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(56): (foo as Foo) == null ? undefined : foo.bar; 2`] = `

Message:
> 1 | (foo as Foo) == null ? undefined : foo.bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | foo?.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(57): (foo satisfies Foo) == null ? undefined : foo.bar; 1`] = `

  1 | (foo satisfies Foo) == null ? undefined : foo.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(57): (foo satisfies Foo) == null ? undefined : foo.bar; 2`] = `

Message:
> 1 | (foo satisfies Foo) == null ? undefined : foo.bar;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | foo?.bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(58): with (object) { foo ? foo : bar; } 1`] = `

  1 | with (object) { foo ? foo : bar; }

`;

exports[`prefer-logical-operator-over-ternary > invalid(58): with (object) { foo ? foo : bar; } 2`] = `

Message:
> 1 | with (object) { foo ? foo : bar; }
    |                 ^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | with (object) { foo ?? bar; }

Suggestion 2/2: Switch to \`||\` operator.:
  1 | with (object) { foo || bar; }

`;

exports[`prefer-logical-operator-over-ternary > invalid(59): const yes = true; const no = false; with (object) { yes ? yes : no; } 1`] = `

  1 | const yes = true; const no = false; with (object) { yes ? yes : no; }

`;

exports[`prefer-logical-operator-over-ternary > invalid(59): const yes = true; const no = false; with (object) { yes ? yes : no; } 2`] = `

Message:
> 1 | const yes = true; const no = false; with (object) { yes ? yes : no; }
    |                                                     ^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | const yes = true; const no = false; with (object) { yes ?? no; }

Suggestion 2/2: Switch to \`||\` operator.:
  1 | const yes = true; const no = false; with (object) { yes || no; }

`;

exports[`prefer-logical-operator-over-ternary > invalid(6): !(a === b) ? false : c === d 1`] = `

  1 | !(a === b) ? false : c === d

`;

exports[`prefer-logical-operator-over-ternary > invalid(6): !(a === b) ? false : c === d 2`] = `

Message:
> 1 | !(a === b) ? false : c === d
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Output:
  1 | !!(a === b) && (c === d)

`;

exports[`prefer-logical-operator-over-ternary > invalid(6): foo?.bar ? foo.bar : baz 1`] = `

  1 | foo?.bar ? foo.bar : baz

`;

exports[`prefer-logical-operator-over-ternary > invalid(6): foo?.bar ? foo.bar : baz 2`] = `

Message:
> 1 | foo?.bar ? foo.bar : baz
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | foo?.bar ?? baz

Suggestion 2/2: Switch to \`||\` operator.:
  1 | foo?.bar || baz

`;

exports[`prefer-logical-operator-over-ternary > invalid(60): foo?.bar == null ? undefined : foo.bar 1`] = `

  1 | foo?.bar == null ? undefined : foo.bar

`;

exports[`prefer-logical-operator-over-ternary > invalid(60): foo?.bar == null ? undefined : foo.bar 2`] = `

Message:
> 1 | foo?.bar == null ? undefined : foo.bar
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo?.bar ?? undefined

`;

exports[`prefer-logical-operator-over-ternary > invalid(61): foo?.bar != null ? foo.bar : undefined 1`] = `

  1 | foo?.bar != null ? foo.bar : undefined

`;

exports[`prefer-logical-operator-over-ternary > invalid(61): foo?.bar != null ? foo.bar : undefined 2`] = `

Message:
> 1 | foo?.bar != null ? foo.bar : undefined
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo?.bar ?? undefined

`;

exports[`prefer-logical-operator-over-ternary > invalid(62): null == foo?.bar ? undefined : foo.bar 1`] = `

  1 | null == foo?.bar ? undefined : foo.bar

`;

exports[`prefer-logical-operator-over-ternary > invalid(62): null == foo?.bar ? undefined : foo.bar 2`] = `

Message:
> 1 | null == foo?.bar ? undefined : foo.bar
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo?.bar ?? undefined

`;

exports[`prefer-logical-operator-over-ternary > invalid(63): undefined != foo?.bar ? foo.bar : undefined 1`] = `

  1 | undefined != foo?.bar ? foo.bar : undefined

`;

exports[`prefer-logical-operator-over-ternary > invalid(63): undefined != foo?.bar ? foo.bar : undefined 2`] = `

Message:
> 1 | undefined != foo?.bar ? foo.bar : undefined
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo?.bar ?? undefined

`;

exports[`prefer-logical-operator-over-ternary > invalid(64): foo?.bar.c == null ? undefined : foo.bar.c 1`] = `

  1 | foo?.bar.c == null ? undefined : foo.bar.c

`;

exports[`prefer-logical-operator-over-ternary > invalid(64): foo?.bar.c == null ? undefined : foo.bar.c 2`] = `

Message:
> 1 | foo?.bar.c == null ? undefined : foo.bar.c
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo?.bar.c ?? undefined

`;

exports[`prefer-logical-operator-over-ternary > invalid(65): f(foo?.bar == null ? undefined : foo.bar) 1`] = `

  1 | f(foo?.bar == null ? undefined : foo.bar)

`;

exports[`prefer-logical-operator-over-ternary > invalid(65): f(foo?.bar == null ? undefined : foo.bar) 2`] = `

Message:
> 1 | f(foo?.bar == null ? undefined : foo.bar)
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | f(foo?.bar ?? undefined)

`;

exports[`prefer-logical-operator-over-ternary > invalid(66): foo?.bar == null ? null : foo.bar 1`] = `

  1 | foo?.bar == null ? null : foo.bar

`;

exports[`prefer-logical-operator-over-ternary > invalid(66): foo?.bar == null ? null : foo.bar 2`] = `

Message:
> 1 | foo?.bar == null ? null : foo.bar
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo?.bar ?? null

`;

exports[`prefer-logical-operator-over-ternary > invalid(67): foo\nbar == null ? undefined : (bar).baz 1`] = `

  1 | foo
  2 | bar == null ? undefined : (bar).baz

`;

exports[`prefer-logical-operator-over-ternary > invalid(67): foo\nbar == null ? undefined : (bar).baz 2`] = `

Message:
  1 | foo
> 2 | bar == null ? undefined : (bar).baz
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using optional chaining over a ternary.

Suggestion 1/1: Switch to optional chaining.:
  1 | foo
  2 | ;(bar)?.baz

`;

exports[`prefer-logical-operator-over-ternary > invalid(7): !bar ? foo : bar; 1`] = `

  1 | !bar ? foo : bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(7): !bar ? foo : bar; 2`] = `

Message:
> 1 | !bar ? foo : bar;
    | ^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | bar ?? foo;

Suggestion 2/2: Switch to \`||\` operator.:
  1 | bar || foo;

`;

exports[`prefer-logical-operator-over-ternary > invalid(7): (a === b ? c === d : false).toString() 1`] = `

  1 | (a === b ? c === d : false).toString()

`;

exports[`prefer-logical-operator-over-ternary > invalid(7): (a === b ? c === d : false).toString() 2`] = `

Message:
> 1 | (a === b ? c === d : false).toString()
    |  ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Output:
  1 | ((a === b) && (c === d)).toString()

`;

exports[`prefer-logical-operator-over-ternary > invalid(8): !!bar ? foo : !bar; 1`] = `

  1 | !!bar ? foo : !bar;

`;

exports[`prefer-logical-operator-over-ternary > invalid(8): !!bar ? foo : !bar; 2`] = `

Message:
> 1 | !!bar ? foo : !bar;
    | ^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/2: Switch to \`??\` operator.:
  1 | !bar ?? foo;

Suggestion 2/2: Switch to \`||\` operator.:
  1 | !bar || foo;

`;

exports[`prefer-logical-operator-over-ternary > invalid(8): a === b ? true : (c === d ? false : e === f) 1`] = `

  1 | a === b ? true : (c === d ? false : e === f)

`;

exports[`prefer-logical-operator-over-ternary > invalid(8): a === b ? true : (c === d ? false : e === f) 2`] = `

Message:
> 1 | a === b ? true : (c === d ? false : e === f)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Output:
  1 | (a === b) || (c === d ? false : e === f)

`;

exports[`prefer-logical-operator-over-ternary > invalid(8): a === b ? true : (c === d ? false : e === f) 3`] = `

Message:
> 1 | a === b ? true : (c === d ? false : e === f)
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Output:
  1 | a === b ? true : (!(c === d) && (e === f))

`;

exports[`prefer-logical-operator-over-ternary > invalid(9): (a === b && c === d) ? true : e === f 1`] = `

  1 | (a === b && c === d) ? true : e === f

`;

exports[`prefer-logical-operator-over-ternary > invalid(9): (a === b && c === d) ? true : e === f 2`] = `

Message:
> 1 | (a === b && c === d) ? true : e === f
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Output:
  1 | (a === b && c === d) || (e === f)

`;

exports[`prefer-logical-operator-over-ternary > invalid(9): foo == null ? bar : foo; 1`] = `

  1 | foo == null ? bar : foo;

`;

exports[`prefer-logical-operator-over-ternary > invalid(9): foo == null ? bar : foo; 2`] = `

Message:
> 1 | foo == null ? bar : foo;
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer using a logical operator over a ternary.

Suggestion 1/1: Switch to \`??\` operator.:
  1 | foo ?? bar;

`;
